# UntitledSpaceEconomy

./: Cargo.toml
assets/lang/: en.tr
src/: main.rs
src/components/: core.rs  crew_member.rs  item.rs  mod.rs  planet.rs  player.rs  progress.rs  ship.rs  state.rs
src/states/: error.rs  game.rs  main_menu.rs  mod.rs  ship_select.rs
src/util/: config.rs  generators.rs  language.rs  logger.rs  mod.rs  path.rs  random.rs
