[package]
name = "untitled_space_economy"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = "debuginfo"

[dependencies]
chrono = "0.4.38"
dirs = "5.0.1"
macroquad = "0.4.11"
rand = "0.8.5"
roman = "0.1.6"
serde_json = "1.0.122"

[dependencies.serde]
features = ["derive"]
version = "1.0.204"
